recursion.cons.min.Min.scala.error
Erreur de compilation :
Min:8: error: type mismatch;
 found   : Int
 required: List[Int]
  return min(l.head)
               ^